--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="iziToast.min.css">
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <div class="container">
+      <form id="search-form" class="search-form">
+        <input type="text" id="search-input" placeholder="Search for images..." />
+        <button type="submit">Search</button>
+      </form>
+      <div id="loader" class="loader" style="display: none"></div>
+      <div id="gallery" class="gallery"></div>
+    </div>
+    
 
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/pixabay-api.js"></script>
+    <script type="module" src="./js/render-function.js"></script>
+    <script src="iziToast.min.js" type="text/javascript"></script>
   </body>
 </html>
